--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#FDFBF9" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>journiq</title>
+    <title>MyJournle</title>
   </head>
   <body>
     <div id="root"></div>
