--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#FDFBF9" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyJournle</title>
+    
+    <!-- SEO & Meta Tags -->
+    <title>MyJournle - Track Mood, Habits & Money</title>
+    <meta name="description" content="Your personal digital journal. Track your daily mood, manage your habits, monitor your spending, and visualize your life - all in one secure, private app." />
+    <meta name="keywords" content="journal app, mood tracker, habit tracker, expense tracker, personal diary, mental health, daily log, pwa, myjournle, secure journal, offline diary, private journaling app, productivity tool" />
+    <meta name="author" content="MyJournle" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://myjournle.in/" />
+    <meta property="og:title" content="MyJournle - Your Life, Simplified" />
+    <meta property="og:description" content="Track your daily mood, manage habits, and monitor spending in one beautiful, secure place." />
+    <meta property="og:image" content="https://myjournle.in/logo.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://myjournle.in/" />
+    <meta property="twitter:title" content="MyJournle - Your Life, Simplified" />
+    <meta property="twitter:description" content="Track your daily mood, manage habits, and monitor spending in one beautiful, secure place." />
+    <meta property="twitter:image" content="https://myjournle.in/logo.png" />
+
+    <link rel="canonical" href="https://myjournle.in/" />
   </head>
   <body>
     <div id="root"></div>
